# forge

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.sample.yaml  config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
cli/: forge.py
docs/: intern-onboarding-guide.md
engine/: Dockerfile  logs.py  main.py  parser.py  runner.py  scheduler.py  slack.py
nginx/: nginx.conf
pipelines/: README.md  hello-forge.yaml
pipelines/biglog/: pipeline.yaml
pipelines/conflict/: pipeline.yaml
pipelines/escape/: pipeline.yaml
pipelines/lib-core/: pipeline.yaml
pipelines/lib-http/: pipeline.yaml
pipelines/network/: pipeline.yaml
pipelines/oom/: pipeline.yaml
pipelines/service-api/: pipeline.yaml
prod-demo/: Dockerfile.api  Dockerfile.ci  README.md  compose.yaml
prod-demo/api/: pyproject.toml
prod-demo/api/app/: main.py
prod-demo/api/tests/: test_main.py
prod-demo/lib/: pyproject.toml
prod-demo/lib/forge_demo_lib/: pricing.py
prod-demo/pipelines/: api-ci.yaml  publish-api.yaml  publish-lib.yaml
registry/: auth.py  config.py  main.py  metadata.py  resolver.py  storage.py
scripts/: reset-state.sh
