[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-platform"
version = "0.1.0"
description = "Forge CI/CD platform and artifact registry"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "python-multipart==0.0.20",
  "psycopg[binary,pool]==3.2.3",
  "ruamel.yaml==0.18.6",
  "docker==7.1.0",
  "httpx==0.28.1",
  "typer==0.15.1",
  "click==8.1.8",
  "rich==13.9.4",
  "passlib==1.7.4",
  "PyYAML==6.0.2"
]

[project.scripts]
forge = "cli.forge:app"

[tool.setuptools]
packages = ["cli", "engine", "registry"]
