[metadata]
name = forge-platform
version = 0.1.0
description = Forge CI/CD platform and artifact registry

[options]
packages =
    cli
    engine
    registry
python_requires = >=3.12
install_requires =
    fastapi==0.115.6
    uvicorn[standard]==0.34.0
    python-multipart==0.0.20
    psycopg[binary,pool]==3.2.3
    ruamel.yaml==0.18.6
    docker==7.1.0
    httpx==0.28.1
    typer==0.15.1
    click==8.1.8
    rich==13.9.4
    passlib==1.7.4
    PyYAML==6.0.2

[options.entry_points]
console_scripts =
    forge = cli.forge:app
