[project]
name = "forge-demo-api"
version = "0.1.0"
description = "FastAPI service that depends on forge-demo-lib"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "httpx==0.28.1",
  "pytest==8.3.4"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
